--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ nav a {
   #div2 {
       display: block;
       margin-top: 50px;
-      background-image:url("bg-1.png");
+      background-image: url('Backgrounf.png');
       border-radius: 20px;
       padding: 15px;
       margin-bottom: 50px;
